# Opencv_Installation

./: README.md  install_opencv.sh
Sample_project/: CMakeLists.txt  driver.sh
Sample_project/src/: main.cpp
